gitops/apps/bazarr/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
        app.kubernetes.io/name: bazarr
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:latest
          ports:
            - containerPort: 6767
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media-root
              mountPath: /srv/media
            - name: media
              mountPath: /tv
              subPath: library/tv
            - name: media
              mountPath: /movies
              subPath: library/movies
      volumes:
        - name: media-root
          hostPath:
            path: /srv/media
            type: Directory
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: jellyfin-media-pvc
