gitops/apps/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  namespace: apps
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Bazarr
    gethomepage.dev/icon: bazarr.png
    gethomepage.dev/description: Subtitle manager
    gethomepage.dev/href: "http://bazarr.home.arpa"
spec:
  ingressClassName: traefik
  rules:
    - host: bazarr.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 6767
